--- a/Advanced-2/style.css
+++ b/Advanced-2/style.css
@@ -3,7 +3,6 @@
     margin: 0;
     box-sizing: border-box;
 }
-/* zarování kontent na střed. přidání barvu pozadí. */
 body{
     font-family: sans-serif,serif;
     height: 100vh;
@@ -13,22 +12,7 @@ body{
     background-color: #222;
     overflow: hidden;
 }
-/* přidání obrátku do jednotlivých slajdů. */
-.img1{
-    background: url(image/img1.jpg);
-}
-.img2{
-    background: url(image/img2.jpg);
-}
-.img3{
-    background: url(image/img3.jpg);
-}
-.img4{
-    background: url(image/img4.jpg);
-}
-.img5{
-    background: url(image/img5.jpg);
-}
+/* slide styling */
 .container{
     display: flex;
     width: 90vw;
@@ -36,7 +20,6 @@ body{
     border-radius: 25px;
 
 }
-/* stylizace slajdů */
 .slide{
     height: 80vh;
     background-size: cover;
@@ -66,7 +49,22 @@ body{
     top: 0;
     left: 0;
 }
-/* responzivita */
+.img1{
+    background: url(image/img1.jpg);
+}
+.img2{
+    background: url(image/img2.jpg);
+}
+.img3{
+    background: url(image/img3.jpg);
+}
+.img4{
+    background: url(image/img4.jpg);
+}
+.img5{
+    background: url(image/img5.jpg);
+}
+/* responsivity */
 @media (max-width: 700px){
     .container{
         width: 100vw;
