--- a/Advanced-4/style.css
+++ b/Advanced-4/style.css
@@ -1,8 +1,103 @@
-
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
+body{
+    height: 100vh;
+}
+/* stylization container */
+.container-slider{
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+    overflow: hidden;
+}
+/* stylization left part */
+.slide-left{
+    width: 35%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 1s;
+}
+.slide-left div{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-align: center;
+}
+.color-1-slide{
+    background: blue;
+}
+.color-2-slide{
+    background: red;
+}
+.color-3-slide{
+    background: orange;
+}
+.color-4-slide{
+    background: green;
+}
+/* stylization right part */
+.slide-right{
+    position: absolute;
+    width: 65%;
+    height: 100%;
+    top: 0;
+    left: 35%;
+    transition: 1s;
+}
+.slide-right div{
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+.image-1{
+    background: url(image/img1.jpg);
+}
+.image-2{
+    background: url(image/img2.jpg);
+}
+.image-3{
+    background: url(image/img3.jpg);
+}
+.image-4{
+    background: url(image/img4.jpg);
+}
+/* stylization arrow icons */
+.arrow-btns .arrow{
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    left: 35%;
+    background: #fff;
+    cursor: pointer;
+    border-radius: 10px 0 0 10px;
+    transition: 0.1s;
+    border: 2px solid #fff;
+}
+.arrow img{
+    width: 50px;
+    opacity: 0.7;
+}
+.arrow img:hover{
+    opacity: 1;
+}
+.arrow:hover{
+    border: 2px solid #000;
+}
+.arrow-down{
+    transform: translateX(-100%);
+}
+.arrow-up{
+    transform: rotate(180deg) translateY(100%);
+}
 
