--- a/Advanced-5/style.css
+++ b/Advanced-5/style.css
@@ -1,8 +1,64 @@
-
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-
-
+body{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+/* user search styling */
+.filter-container{
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    width: 300px;
+    overflow: hidden;
+}
+/* search field styling */
+.header{
+    background: #17BEBB;
+    color: #fff;
+    padding: 1rem 0.7rem;
+}
+.header p{
+    margin: 5px 0 20px 0;
+}
+.input-filter{
+    background: rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 10px;
+    color: #fff;
+    font-size: 15px;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    outline: none;
+}
+/* list of users styling */
+.user-list{
+    list-style: none;
+    max-height: 400px;
+    overflow-y: auto;
+}
+.user-list li{
+    display: flex;
+    padding: 1rem 1.5rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.user-list img{
+    border-radius: 50%;
+    height: 50px;
+}
+.user-info{
+    margin-left: 10px;
+}
+.user-info h3{
+    margin-bottom: 10px;
+}
+.user-info p{
+    font-size: 14px;
+}
+.user-list li.hide{
+    display: none;
+}
